initial commit react project

--- a/package.json
+++ b/package.json
@@ -10,12 +10,33 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/preset-react": "^7.0.0",
         "axios": "^0.19",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
+        "popper.js": "^1.12",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "query-string": "^6.8.2",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-js-pagination": "^3.0.2",
+        "react-redux": "^7.1.0",
+        "react-router-dom": "^5.0.1",
+        "react-scripts": "^3.4.0",
+        "react-spinners": "^0.5.13",
+        "redux": "^4.0.4",
+        "redux-logger": "^3.0.6",
+        "redux-promise-middleware": "^6.1.1",
+        "redux-thunk": "^2.3.0"
     }
 }
