--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "helmet": "^3.22.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
+        "react-helmet": "^6.0.0",
         "readline": "^1.3.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
