--- a/package.json
+++ b/package.json
@@ -20,18 +20,14 @@
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
         "react-helmet": "^6.0.0",
         "readline": "^1.3.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
-    },
-    "dependencies": {
+        "sass-loader": "^8.0.0",
         "query-string": "^6.8.2",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
         "react-js-pagination": "^3.0.2",
         "react-redux": "^7.1.0",
         "react-router-dom": "^5.0.1",
